Quelques changements de structure - Placement des mockups dans des sous-dossiers spécifiques - Intégration de JavaFX - Changement de nom de package pour les tests - Ajout de nouvelles consignes dans le README